// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders avatar with icon 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(103, 80, 164, 1)",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    accessibilityElementsHidden={true}
    allowFontScaling={false}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    selectable={false}
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontSize": 38.4,
        },
        Array [
          Object {
            "lineHeight": 38.4,
            "transform": Array [
              Object {
                "scaleX": 1,
              },
            ],
          },
          Object {
            "backgroundColor": "transparent",
          },
        ],
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰋼
  </Text>
</View>
`;

exports[`renders avatar with icon and custom background color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#f44336",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    accessibilityElementsHidden={true}
    allowFontScaling={false}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    selectable={false}
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontSize": 38.4,
        },
        Array [
          Object {
            "lineHeight": 38.4,
            "transform": Array [
              Object {
                "scaleX": 1,
              },
            ],
          },
          Object {
            "backgroundColor": "transparent",
          },
        ],
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰋼
  </Text>
</View>
`;

exports[`renders avatar with image 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(103, 80, 164, 1)",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
>
  <Image
    accessibilityIgnoresInvertColors={true}
    source={
      Object {
        "src": "avatar.png",
      }
    }
    style={
      Object {
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;

exports[`renders avatar with text 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(103, 80, 164, 1)",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "textAlign": "left",
        },
        Object {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        Object {
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 32,
            "lineHeight": 32,
          },
          undefined,
        ],
      ]
    }
  >
    XD
  </Text>
</View>
`;

exports[`renders avatar with text and custom background color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#f44336",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "textAlign": "left",
        },
        Object {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        Object {
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 32,
            "lineHeight": 32,
          },
          undefined,
        ],
      ]
    }
  >
    XD
  </Text>
</View>
`;

exports[`renders avatar with text and custom colors 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(103, 80, 164, 1)",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "textAlign": "left",
        },
        Object {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        Object {
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          Object {
            "color": "#FFFFFF",
            "fontSize": 32,
            "lineHeight": 32,
          },
          undefined,
        ],
      ]
    }
  >
    XD
  </Text>
</View>
`;

exports[`renders avatar with text and custom size 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(103, 80, 164, 1)",
        "borderRadius": 48,
        "height": 96,
        "width": 96,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "textAlign": "left",
        },
        Object {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        Object {
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 48,
            "lineHeight": 48,
          },
          undefined,
        ],
      ]
    }
  >
    XD
  </Text>
</View>
`;
